ingress-codechallenge-management.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codechallenge-management-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /management/$1
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /codechallenge/management/(.*)
        pathType: Prefix
        backend:
          service:
            name: codechallenge2
            port:
              number: 8081
