ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codechallenge-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: /$1
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /codechallenge/?(.*)
        pathType: Prefix
        backend:
          service:
            name: codechallenge2
            port:
              number: 8080
